# CV-Segmentation-viaSegformer

./: README.md  pyproject.toml
src/: SemanticSegmentation.ipynb
